v2.2.0: Fix critical thread-safety issue in StreamingExecutionContext
- CRITICAL: Fixed thread-safety in StreamingExecutionContext using CopyOnWriteArrayList and ConcurrentHashMap
- BREAKING: addMetadata(key, null) now removes the key (ConcurrentHashMap limitation)
- Thread-safety tests now use virtual threads
- Updated AGENTS.md with Maven Central publishing guide
- Removed obsolete docs: GENERIC_ISSUE.md, POSSIBLE_ISSUES.md, POTENTIAL_BUGS_2.md, THE_STATE_OF_STREAMING.md

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>